Format some data as tables

--- a/Bergen Bysykkel API.ipynb
+++ b/Bergen Bysykkel API.ipynb
@@ -6,8 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# internal\n",
     "import urllib.request\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "# external\n",
+    "from tabulate import tabulate\n",
+    "from IPython.display import HTML, display"
    ]
   },
   {
@@ -334,43 +339,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kapasitet: 707 sykler\n"
+      "Capacity (total): 707 bikes\n"
      ]
     }
    ],
    "source": [
     "capacity = sum(x['capacity'] for x in station_info['data']['stations'])\n",
-    "print(f\"Kapasitet: {capacity} sykler\")"
+    "print(f\"Capacity (total): {capacity} bikes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sykler per bergenser: 0.0028 sykkel\n"
+      "Bikes per citizen in Bergen: 0.0028\n"
      ]
     }
    ],
    "source": [
     "bergensere = 254_235 # https://www.ssb.no/befolkning/statistikker/beftett\n",
-    "print(f\"Sykler per bergenser: {capacity/bergensere:.4f} sykkel\")"
+    "print(f\"Bikes per citizen in Bergen: {capacity/bergensere:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -673,49 +678,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stasjon 83 har 4 sykler tilgjengelig\n",
-      "Stasjon 8 har 1 sykler tilgjengelig\n",
-      "Stasjon 7 har 2 sykler tilgjengelig\n",
-      "Stasjon 58 har 9 sykler tilgjengelig\n",
-      "Stasjon 219 har 0 sykler tilgjengelig\n",
-      "Stasjon 216 har 0 sykler tilgjengelig\n",
-      "Stasjon 214 har 13 sykler tilgjengelig\n",
-      "Stasjon 49 har 1 sykler tilgjengelig\n",
-      "Stasjon 87 har 0 sykler tilgjengelig\n",
-      "Stasjon 151 har 4 sykler tilgjengelig\n",
-      "Stasjon 212 har 0 sykler tilgjengelig\n",
-      "Stasjon 220 har 1 sykler tilgjengelig\n",
-      "Stasjon 3 har 1 sykler tilgjengelig\n",
-      "Stasjon 217 har 3 sykler tilgjengelig\n",
-      "Stasjon 116 har 0 sykler tilgjengelig\n",
-      "Stasjon 82 har 0 sykler tilgjengelig\n",
-      "Stasjon 33 har 0 sykler tilgjengelig\n",
-      "Stasjon 215 har 2 sykler tilgjengelig\n",
-      "Stasjon 34 har 9 sykler tilgjengelig\n",
-      "Stasjon 221 har 2 sykler tilgjengelig\n",
-      "Stasjon 222 har 5 sykler tilgjengelig\n",
-      "Stasjon 117 har 3 sykler tilgjengelig\n",
-      "Stasjon 223 har 2 sykler tilgjengelig\n",
-      "Stasjon 131 har 2 sykler tilgjengelig\n",
-      "Stasjon 132 har 5 sykler tilgjengelig\n",
-      "Stasjon 5 har 2 sykler tilgjengelig\n",
-      "Stasjon 156 har 3 sykler tilgjengelig\n",
-      "Stasjon 157 har 7 sykler tilgjengelig\n",
-      "Stasjon 24 har 0 sykler tilgjengelig\n",
-      "Stasjon 75 har 3 sykler tilgjengelig\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead>\n",
+       "<tr><th style=\"text-align: right;\">  ID</th><th>Name                           </th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr><td style=\"text-align: right;\">   3</td><td>Grieghallen                    </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">   5</td><td>Solheimsviken                  </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">   7</td><td>Neumannsgate                   </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">   8</td><td>Haukeland sykehus              </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  24</td><td>Studentboligene ved Grønneviken</td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  33</td><td>Høyskolen på Vestlandet        </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  34</td><td>Cornerteateret                 </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  49</td><td>Studentsenteret UIB            </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  58</td><td>Tårnplass                      </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  75</td><td>Akvariet                       </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  82</td><td>Den nationale scene 1          </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  83</td><td>Bergen jernbanestasjon         </td></tr>\n",
+       "<tr><td style=\"text-align: right;\">  87</td><td>ADO arena                      </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 116</td><td>Lysverket                      </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 117</td><td>Verftet                        </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 131</td><td>Gulating                       </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 132</td><td>Nøstetorget                    </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 151</td><td>Småstrandgaten                 </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 156</td><td>Allehelgens plass              </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 157</td><td>Høyteknologisenteret           </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 212</td><td>Klosteret                      </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 214</td><td>Media City                     </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 215</td><td>Nonneseterplass                </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 216</td><td>Johanneskirken                 </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 217</td><td>Nykirken                       </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 219</td><td>Jonsvollkvartalet              </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 220</td><td>Møllendalsplass                </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 221</td><td>Sandvikstorget                 </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 222</td><td>Sandviken Brygge               </td></tr>\n",
+       "<tr><td style=\"text-align: right;\"> 223</td><td>Rådhuset                       </td></tr>\n",
+       "</tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "for station in station_status['data']['stations']:\n",
-    "    print(f'Stasjon {station[\"station_id\"]} har {station[\"num_bikes_available\"]} sykler tilgjengelig')"
+    "stations = {}\n",
+    "\n",
+    "station_ids = [x['station_id'] for x in station_info['data']['stations']]\n",
+    "station_names = [x['name'] for x in station_info['data']['stations']]\n",
+    "\n",
+    "for (id, name) in zip(station_ids, station_names):\n",
+    "    stations.update({id: name})\n",
+    "    \n",
+    "display(HTML(tabulate([(k, v) for (k, v) in stations.items()], headers=[\"ID\", \"Name\"], tablefmt='html')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead>\n",
+       "<tr><th>Station                        </th><th style=\"text-align: right;\">  Free</th><th style=\"text-align: right;\">  Total</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr><td>Bergen jernbanestasjon         </td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">     13</td></tr>\n",
+       "<tr><td>Haukeland sykehus              </td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">     18</td></tr>\n",
+       "<tr><td>Neumannsgate                   </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">     29</td></tr>\n",
+       "<tr><td>Tårnplass                      </td><td style=\"text-align: right;\">     9</td><td style=\"text-align: right;\">     16</td></tr>\n",
+       "<tr><td>Jonsvollkvartalet              </td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     19</td></tr>\n",
+       "<tr><td>Johanneskirken                 </td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     25</td></tr>\n",
+       "<tr><td>Media City                     </td><td style=\"text-align: right;\">    13</td><td style=\"text-align: right;\">      6</td></tr>\n",
+       "<tr><td>Studentsenteret UIB            </td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">     30</td></tr>\n",
+       "<tr><td>ADO arena                      </td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     19</td></tr>\n",
+       "<tr><td>Småstrandgaten                 </td><td style=\"text-align: right;\">     4</td><td style=\"text-align: right;\">     22</td></tr>\n",
+       "<tr><td>Klosteret                      </td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     22</td></tr>\n",
+       "<tr><td>Møllendalsplass                </td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">     15</td></tr>\n",
+       "<tr><td>Grieghallen                    </td><td style=\"text-align: right;\">     1</td><td style=\"text-align: right;\">     30</td></tr>\n",
+       "<tr><td>Nykirken                       </td><td style=\"text-align: right;\">     3</td><td style=\"text-align: right;\">      7</td></tr>\n",
+       "<tr><td>Lysverket                      </td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     25</td></tr>\n",
+       "<tr><td>Den nationale scene 1          </td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     10</td></tr>\n",
+       "<tr><td>Høyskolen på Vestlandet        </td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     25</td></tr>\n",
+       "<tr><td>Nonneseterplass                </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">     35</td></tr>\n",
+       "<tr><td>Cornerteateret                 </td><td style=\"text-align: right;\">     9</td><td style=\"text-align: right;\">     16</td></tr>\n",
+       "<tr><td>Sandvikstorget                 </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">     17</td></tr>\n",
+       "<tr><td>Sandviken Brygge               </td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">      5</td></tr>\n",
+       "<tr><td>Verftet                        </td><td style=\"text-align: right;\">     3</td><td style=\"text-align: right;\">     16</td></tr>\n",
+       "<tr><td>Rådhuset                       </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">     17</td></tr>\n",
+       "<tr><td>Gulating                       </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">     11</td></tr>\n",
+       "<tr><td>Nøstetorget                    </td><td style=\"text-align: right;\">     5</td><td style=\"text-align: right;\">     31</td></tr>\n",
+       "<tr><td>Solheimsviken                  </td><td style=\"text-align: right;\">     2</td><td style=\"text-align: right;\">      8</td></tr>\n",
+       "<tr><td>Allehelgens plass              </td><td style=\"text-align: right;\">     3</td><td style=\"text-align: right;\">     17</td></tr>\n",
+       "<tr><td>Høyteknologisenteret           </td><td style=\"text-align: right;\">     7</td><td style=\"text-align: right;\">     18</td></tr>\n",
+       "<tr><td>Studentboligene ved Grønneviken</td><td style=\"text-align: right;\">     0</td><td style=\"text-align: right;\">     31</td></tr>\n",
+       "<tr><td>Akvariet                       </td><td style=\"text-align: right;\">     3</td><td style=\"text-align: right;\">     16</td></tr>\n",
+       "</tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "station_names = [stations[x['station_id']] for x in station_status['data']['stations']]\n",
+    "available_bikes = [x['num_bikes_available'] for x in station_status['data']['stations']]\n",
+    "available_docks = [x['num_docks_available'] for x in station_status['data']['stations']]\n",
+    "\n",
+    "table = []\n",
+    "for (name, bikes, docks) in zip(station_names, available_bikes, available_docks):\n",
+    "    table.append([name, bikes, docks])\n",
+    "    \n",
+    "display(HTML(tabulate(table, headers=[\"Station\", \"Free\", \"Total\"], tablefmt='html')))"
    ]
   },
   {
